<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Bitpot</string>

    <!-- Preferences -->
    <string name="preference_file_name" translatable="false">net.onefivefour.android.bitpot_preferences</string>
    <string name="preference_privacy_analytics_key">preference_privacy_analytics_key</string>
    <string name="preference_privacy_personalized_ads_key">preference_privacy_personalized_ads_key</string>
    <string name="preference_dark_mode_key" translatable="false">preference_dark_mode_key</string>
    <string name="preference_dark_mode_title" translatable="false">Dark Mode</string>
    <string name="preference_dark_mode_default">3</string>

    <string-array name="preference_dark_mode_entries">
        <item>Light</item>
        <item>Dark</item>
        <item>Set by Battery Saver</item>
    </string-array>

    <string-array name="preference_dark_mode_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <!-- Notification Channel IDs -->
    <string name="channel_id_pipeline_updates">channel_id_pipeline_updates</string>
    <string name="channel_id_pull_request_updates">channel_id_pull_request_updates</string>

    <!-- Notification Channel Names -->
    <string name="channel_name_pipeline_updates">Pipeline Updates</string>
    <string name="channel_name_pull_request_updates">Pull Request Updates</string>

    <!-- Notification Titles -->
    <string name="notification_title_pipeline_state_updated">Pipeline State Update for \"%s\"</string>
    <string name="notification_title_pull_request_created">New Pull Request</string>
    <string name="notification_title_pull_request_approved">Pull Request approved</string>
    <string name="notification_title_pull_request_unapproved">Pull Request unapproved</string>
    <string name="notification_title_pull_request_comment_created">New Comment</string>

    <!-- Notification Contents -->
    <string name="notification_content_pull_request_created">%s created a new PR in \"%s\"</string>
    <string name="notification_content_pull_request_comment_created">%s commented a PR in \"%s\"</string>
    <string name="notification_content_pull_request_approved">%s approved a PR in \"%s\"</string>
    <string name="notification_content_pull_request_unapproved">%s unapproved a PR in \"%s\"</string>


    <!-- App Strings -->
    <string name="login">Login</string>
    <string name="repositories">Repositories</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="success">Success</string>
    <string name="source">Source</string>
    <string name="pull_requests">Pull Requests</string>
    <string name="pipelines">Pipelines</string>
    <string name="downloads">Downloads</string>

    <string name="private_repository">Private Repository</string>

    <string name="pipeline_was_successful">Pipeline was successful</string>
    <string name="pipeline_failed">Pipeline failed</string>
    <string name="pipeline_expired">Pipeline expired</string>
    <string name="pipeline_is_now_running">Pipeline is now running</string>
    <string name="pipeline_has_an_error">Pipeline has an error</string>
    <string name="pipeline_stopped">Pipeline stopped</string>
    <string name="pipeline_paused">Pipeline paused</string>
    <string name="pipeline_is_pending">Pipeline is pending</string>
    <string name="hash_tagged_string">#%s</string>
    <string name="no_pipelines_found">No pipelines found</string>
    <string name="no_repositories_found">No repositories found</string>
    <string name="no_pull_requests_found">No Pull Requests found</string>
    <string name="no_downloads_found">No Downloads found</string>
    <string name="no_files_found">No files found</string>
    <string name="cancel">Cancel</string>
    <string name="unknown_error">Unknown Error occurred.</string>
    <string name="error_colon">Error: %s</string>
    <string name="toggle_line_numbers">Toggle line numbers</string>
    <string name="toggle_line_wrap">Toggle line wrap</string>
    <string name="share">Share</string>
    <string name="shared_file_via_bitpot">Shared file via Bitpot App: %s</string>
    <string name="pull_request">PullRequest</string>
    <string name="transition_name_pull_request">transitionNamePullRequest</string>
    <string name="merge">Merge</string>
    <string name="merged">Merged</string>
    <string name="approve">Approve</string>
    <string name="unapprove">unapprove</string>
    <string name="reply">Reply</string>
    <string name="comment">comment</string>
    <string name="send">send</string>
    <string name="write_your_comment">Write your comment</string>
    <string name="add_a_comment">Add a comment</string>
    <string name="comment_was_sent_successfully">Comment was sent successfully</string>
    <string name="error_while_sending_comment">Error while sending comment</string>
    <string name="no_comment_sent_because_empty">No comment was sent, because you wrote nothing</string>
    <string name="delete">Delete</string>
    <string name="comment_was_deleted_successfully">Comment was deleted successfully</string>
    <string name="error_while_deleting_comment">Unknown error while deleting comment.</string>
    <string name="commit_message">Commit message</string>
    <string name="close_source_branch">Close source branch</string>
    <string name="merge_commit">Merge commit</string>
    <string name="squash">Squash</string>
    <string name="fast_forward">Fast Forward</string>
    <string name="error_while_merging">Unknown error while merging this Pull Request.</string>
    <string name="merge_successful">Merging was successful</string>
    <string name="notifications">Notifications</string>
    <string name="pipeline_updates">Pipeline Updates</string>
    <string name="pull_request_updates">Pull Request Updates</string>
    <string name="copy" tools:override="true">copy</string>

    <string name="dialog_no_permission_title">Sorry, you must be admin!</string>
    <string name="dialog_no_permission_intro">Due to restrictions of the Bitbucket REST API, push notifications can only be set up by repository admins. It seems like you are not an admin/owner of this repository. You have the following options to activate push notifications for this repository anyway:</string>
    <string name="dialog_no_permission_option_1_title">Option 1:\nGet admin permissions</string>
    <string name="dialog_no_permission_option_2_title">Option 2:\nAsk an admin to create a web hook</string>
    <string name="dialog_no_permission_option_3_title">Option 3 (in development):\nOpt-In for pulling repository updates</string>
    <string name="dialog_no_permission_option_1_text">Depending on your organization, you could ask an existing admin to level up your permissions.  Push notifications are activated by creating a [web hook](https://confluence.atlassian.com/bitbucket/manage-webhooks-735643732.html). So if your account has the privilege to create and change web hooks for this repository, you should be ready to go.</string>
    <string name="dialog_no_permission_option_2_text_1">If it is not possible for you to get the required permissions, you can ask your admin to create the web hook manually. Just give him/her the following URL which is used to send push notifications to this device. The ID in the URL is your Google Notification Token. It may change after an app re-install or on other rare occasions. So if pushes suddenly stop to work, come back here and check if the URL changed.</string>
    <string name="dialog_no_permission_option_2_text_2">You can choose from to get notified about the following web hook actions:\n * repo:commit_status_updated\n * repo:commit_status_created\n * pullrequest:approved\n * pullrequest:comment_created\n * pullrequest:created</string>
    <string name="dialog_no_permission_option_3_text">I am planning to give you a third option by implementing a pulling mechanism. If it works, it will run in the background and query the Bitbucket Server for repository updates every few minutes. If this is a valid option for you, keep your eyes open for future app updates.</string>

    <string name="web_hook_url">WebHook URL</string>
    <string name="web_hook_url_copied_to_clipboard">WebHook URL copied to clipboard</string>
    <string name="imprint">Imprint</string>
    <string name="privacy">Privacy</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="bitpot">Bitpot</string>
    <string name="feedback_email_address">hello@bitpot-app.com</string>
    <string name="feedback_email_subject">Feedback via app</string>
    <string name="feedback_email_body">"Dear Flo,\n\nI really enjoy using Bitpot, but "</string>
    <string name="pipeline_url">https://bitbucket.org/%s/%s/addon/pipelines/home#!/results/%d</string>
    <string name="legal">Legal</string>
    <string name="third_party_licenses">Third Party Licenses</string>
    <string name="ad">Ad</string>
    <string name="before_you_login">Before you login…</string>
    <string name="consent_request">Bitpot needs your consent to handle some of your private data. Some of it is mandatory to make this app work and to help me improving it.\n\nTo find out what information is processed while using Bitpot, click on the \"Privacy Policy\" button. To give your consent for using this data and start using Bitpot, click on the \"Agree\" button.</string>
    <string name="agree">Agree</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="crash_reporting_mandatory">Crash Reporting (Mandatory)</string>
    <string name="analytics">Analytics</string>
    <string name="personalized_ads">Personalized Ads</string>
    <string name="ui">UI</string>
    <string name="no_app_found_for_this_file">Could not find a suitable app for this filename: %s</string>
    <string translatable="false" name="app_version">%s / %d / %s</string>

    <string-array name="merge_strategies">
        <item>@string/merge_commit</item>
        <item>@string/squash</item>
        <item>@string/fast_forward</item>
    </string-array>

</resources>
