<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:key="@string/preference_file_name">

    <PreferenceCategory
        android:title="@string/ui"
        app:iconSpaceReserved="false">

        <androidx.preference.ListPreference
            android:defaultValue="@string/preference_dark_mode_default"
            android:entries="@array/preference_dark_mode_entries"
            android:entryValues="@array/preference_dark_mode_entry_values"
            android:key="@string/preference_dark_mode_key"
            android:summary="%s"
            android:title="@string/preference_dark_mode_title"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/privacy"
        app:iconSpaceReserved="false">

        <net.onefivefour.android.bitpot.customviews.settings.BitpotSwitchPreference
            android:defaultValue="true"
            android:key="@string/preference_privacy_analytics_key"
            android:title="@string/analytics"
            android:widgetLayout="@layout/settings_switch"
            app:iconSpaceReserved="false" />

        <net.onefivefour.android.bitpot.customviews.settings.BitpotSwitchPreference
            android:defaultValue="true"
            android:key="@string/preference_privacy_personalized_ads_key"
            android:title="@string/personalized_ads"
            android:widgetLayout="@layout/settings_switch"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>